--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/mylibrary?useUnicode=true&characterEncoding=utf8&useAffectedRows=true
-jdbc.username=suixin
-jdbc.password=Zkm229544074
+jdbc.url=jdbc:mysql://118.31.15.127:3306/bookmgr?useUnicode=true&characterEncoding=utf8&useAffectedRows=true
+jdbc.username=root
+jdbc.password=123456
