--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,11 @@
       <artifactId>pagehelper</artifactId>
       <version>5.2.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.9.0</version>
+    </dependency>
   </dependencies>
 
   <build>
